2004-03-08  Lutz Euler  <lutz.euler@freenet.de>

	* lstream.c (Lstream_pseudo_close): Fix test for LSTREAM_FL_IS_OPEN.

2004-02-26  Jerry James  <james@xemacs.org>

	* console.h (device_metrics): New metrics num_screens,
	backing_store, save_under.
	* device-x.c (x_device_system_metrics): Support the new metrics.
	* device.c: Add symbols for the new metrics.
	* device.c (Fdevice_system_metric): Support the new metrics.
	* device.c (Fdevice_system_metrics): Ditto.
	* device.c (syms_of_device): Define symbols for the new metrics.

2004-02-25  Jerry James  <james@xemacs.org>

	* sysdep.h: Declare interrupt/quit-related symbols as C symbols.
	* xemacs.def.in.in: Fix placement error in previous patch.

2004-02-25  Jerry James  <james@xemacs.org>

	* general-slots.h: Make Qcritical, Qdelete, Qsearch, and Qsimple
	visible to modules (all are used by the LDAP module).
	* lisp.h: Make stuff in QUIT and QUITP visible to modules.
	* sysdep.h: Make speed_up_interrupts and slow_down_interrupts
	visible to modules (both are used by the LDAP module).
	* xemacs.def.in.in: Reflect all of the above additions to the
	module API.

2004-02-20  Stephen J. Turnbull  <stephen@xemacs.org>

	* bytecode.c (execute_optimized_program):
	Identify and mark more potential GC locations.
	Remove dead STATIC_GCPRO_STACK code and CPP constructs.
	Document GCPRO_STACK usage.

	* fns.c (Fnthcdr):
	(Fnth):
	(Felt):
	Propagate "This function can GC"s.
	(Fput):
	Propagate "This function cannot GC"s.

2004-02-17  Jerry James  <james@xemacs.org>

	* menubar-x.c (protected_menu_item_descriptor_to_widget_value_1):
	Move begin_gc_forbidden() here so it affects all callers.
	* menubar-x.c (menu_item_descriptor_to_widget_value): Call
	protected_menu_item_descriptor_to_widget_value_1 with
	call_trapping_problems.

2004-02-16  Jerry James  <james@xemacs.org>

	* gui-x.c (wv_set_evalable_slot): Check for eval within redisplay.

2004-02-14  Jerry James  <james@xemacs.org>
